# tds_project_2

./: README.md  autolysis.py  pyproject.toml  res.json  response.md  test.ipynb
goodreads/: README.md
happiness/: README.md
